# vulkan-tutorial-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  check_vulkan.sh  error.txt  flake.nix  opengl_toolchain.cmake
assets/shaders/: 31_push_constants.frag
src/: 26_texture_mapping.rs  27_depth_buffering.rs  28_model_loading.rs  29_mipmapping.rs  30_multisampling.rs  31_push_constants.rs  32_recycling_command_buffers.rs  33_secondary_command_buffers.rs  vk_window.rs
