[package]
name = "vulkan-tutorial-rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# Core Dependencies
[dependencies]
# Windowing and Input System
winit = "0.30"
raw-window-handle = "0.6" # Required by winit for platform-specific window handles

# Vulkan API Bindings
ash = "0.38" # Low-level Vulkan bindings

# Utility Crates
image = "0.25"             # For loading texture images
nalgebra = "0.33"          # For linear algebra (vectors, matrices)
tobj = "4"                 # For loading .obj 3D models (if used in examples)

# Error Handling
anyhow = "1"               # Flexible error handling
thiserror = "2"            # For creating custom error types

# Logging
log = "0.4"                # Logging facade
pretty_env_logger = "0.5"  # Environment-based logger with pretty output

# Dynamic Library Loading
libloading = "0.8"         # Used by Ash to load the Vulkan loader/runtime

# Build-time Dependencies
[build-dependencies]
walkdir = "2"              # To find shader files in the build script

# Binary Targets
[[bin]]
name = "26_texture_mapping"
path = "src/26_texture_mapping.rs"

[[bin]]
name = "27_depth_buffering"
path = "src/27_depth_buffering.rs"

[[bin]]
name = "28_model_loading"
path = "src/28_model_loading.rs"

[[bin]]
name = "29_mipmapping"
path = "src/29_mipmapping.rs"

[[bin]]
name = "30_multisampling"
path = "src/30_multisampling.rs"

[[bin]]
name = "winit_example"
path = "src/winit_example.rs"


